--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.9.3
 blinker==1.5
 click==8.1.3
+dnspython==2.3.0
 dominate==2.7.0
+email-validator==1.3.1
 Flask==2.2.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.2
@@ -10,6 +12,7 @@ Flask-Moment==1.0.5
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
